--- a/style.css
+++ b/style.css
@@ -9,13 +9,12 @@
   --p-font: 1.1rem;
 }
 
-body {
+.background {  
   width: "";
-  background-color: var(--bg-color);
-  background: url("/img/bg-desktop.png");
+  background-image: url("/img/bg-desktop.png");
   background-size: cover;
   background-repeat: no-repeat;
-  color: var(--white);
+  background-position: center;
 }
 
 header {
@@ -28,11 +27,11 @@ header {
   align-items: center;
   justify-content: space-between;
   background: transparent;
-  padding: 25px 5%;
+  padding: 25px 10%;
   transition-duration: 0.4s;
 }
 header.sticky {
-  padding: 12px 15%;
+  padding: 12px 10%;
   background: var(--text-color);
 }
 
@@ -41,11 +40,13 @@ header.sticky {
 }
 
 .logo {
-  color: var(--text-color);
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 32.68px;
   letter-spacing: 1px;
+  background: -webkit-linear-gradient(#ff267a, #ffa634);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .navbar {
@@ -91,16 +92,13 @@ section {
 }
 
 @media (max-width: 1270px) {
-  body {
-    width: "";
-
-    background-color: var(--bg-color);
-    background: url("/img/bg-tablet.png");
+  .background { 
+    width: "";   
+    background-image: url("/img/bg-tablet.png");
     background-size: cover;
     background-repeat: no-repeat;
-    color: var(--white);
+    background-position: center;
   }
-  
 
   #menu-icon {
     display: initial;
@@ -137,13 +135,12 @@ section {
 }
 
 @media (max-width: 990px) {
-  body {
+  .background {
     width: "";
-    background-color: var(--bg-color);
-    background: url("/img/bg-mobile.png");
+    background-image: url("/img/bg-mobile.png");
     background-size: cover;
     background-repeat: no-repeat;
-    color: var(--white);
+    background-position: center;
   }
 
   .home {
