--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header {
   color: var(--text-color)
 }
 
-.home-content {border:1px solid red;
+.home-content {
   display: flex;
   flex-direction: row;
 }
