--- a/style.css
+++ b/style.css
@@ -35,15 +35,12 @@ body {
   background: var(--bg-color);
   background: url(/img/bg-mobile.png) no-repeat center center;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 
-header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  background: transparent;
-  padding: 24px 24px;
+nav {
+  padding: 20px;
 }
 
 .logo {
@@ -56,32 +53,61 @@ header {
   -webkit-text-fill-color: transparent;
 }
 
-#menu-icon {
-  cursor: pointer;
-  font-size: 32px;
-}
-
-.navbar {
-  position: relative;
-  display: flex;
-  top: -700px;
-  left: 0;
+.nav-list {
+  position: absolute;
+  top: 8vh;
   right: 0;
-  gap: 20px;
+  width: 60vw;
+  height: 92vh;
+  background: #dddddd;
   flex-direction: column;
-  background: var(--bg-color);
-  transition: all.30s;
-  text-align: right;
-  background: transparent;
+  align-items: center;
+  justify-content: space-around;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in;
+
 }
 
-.navbar a i{
+.nav-list li {
+  margin-left: 0;
+  opacity: 0;
+
+}
+
+.mobile-menu {
   display: block;
 }
 
+.nav-list.active {
+  transform: translateX(0);
 
-.navbar.active {
-  top: 100%;
+}
+
+
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+}
+
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-10px, 10px);
+}
+
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-1px, -2px);
 }
 
 .home-container {
@@ -220,21 +246,6 @@ header {
   }
 
 }
-/* 
-.rating.star {
-  filter: saturate(0) brightness(2);
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.rating:hover .star,
-.rating .star.ranked {
-  filter: saturate(1) brightness(1);
-}
-
-.rating .star:hover~.star {
-  filter: saturate(0) brightness(2);
-} */
 
 
 @media (min-width: 640px) {
@@ -243,10 +254,10 @@ header {
     background-size: cover;
   }
 
-  header {
+  nav {
     padding: 24px 32px;
   }
-  
+
 
   .home-container {
     padding: 48px 32px;
@@ -298,29 +309,74 @@ header {
 }
 
 @media (min-width: 1024px) {
-  body {
+  body {    
     background: url("/img/bg-desktop.png") no-repeat center center;
     background-size: cover;
   }
 
-  header {border: 1px solid red;
-    width: 100%;
+  a {
+    color: #000000;
+    text-decoration: none;
+    transition: 0.3s;
+
+  }
+  a:hover {
+    opacity: 0.3;
+  }
+
+  span {
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: #ffffff;
+  }
+
+  nav {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    background: #ffffff;
+    height: 8vh;
     background: transparent;
     padding: 24px 64px;
   }
 
-  .navbar {border: 1px solid red;
-    top: 100%;
-    gap: 20px;
-    flex-direction: row;
-  } 
-  
-  #menu-icon {
-    display: none;
+  .nav-list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+
   }
+
+  .nav-list li {
+    letter-spacing: 3px;
+    margin-left: 32px;
+
+  }
+
+  .mobile-menu {
+    display: none;
+    cursor: pointer;
+  }
+
+  .mobile-menu div {
+    width: 25px;
+    height: 3px;
+    background: #000000;
+    margin: 5px;
+    transition: 0.3s;
+  }
+
+  .f-btn {
+    padding: 10px 40px;
+    height: 40px;
+    line-height: 42px;
+    background: rgb(0, 0, 0);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    text-decoration: none;
+  }
+
 
   .home {
     display: flex;
